[package]
name = "kvs"
version = "0.1.0"
authors = ["MuZhou233 <muzhou233@outlook.com>"]
description = "A key-value store"
edition = "2018"

[dev-dependencies]
assert_cmd = "0.11"
predicates = "1.0"
tempfile = "3.0"
walkdir = "2.2"

[dependencies]
structopt = "0.3"
serde = "1.0"
serde_json = "1.0"
ron = "0.6"
bson = "1.2"
failure = "0.1.8"