[package]
name = "kvs"
version = "0.1.0"
authors = ["MuZhou233 <muzhou233@outlook.com>"]
description = "A key-value store"
edition = "2018"

[dev-dependencies]
assert_cmd = "0.11"
criterion = "0.2.11"
crossbeam-utils = "0.6.5"
predicates = "1.0.0"
rand = "0.6.5"
tempfile = "3.0.7"
walkdir = "2.2.7"
panic-control = "0.1.4"

[dependencies]
structopt = "0.3"
serde = "1.0"
ron = "0.6"
failure = "0.1.8"
slog = "2.7.0"
slog-term = "2.8.0"
sled = "0.34.6"
rayon = "1.5.1"